// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form text component should render list of errors when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="heading-medium error-summary-heading"
    id="error-summary-heading-example-1"
  >
    Please fix the following errors
  </h2>
  <ul
    class="error-summary-list"
  >
    <li>
      <a
        href="#field1"
      >
        Error 1
      </a>
    </li>
    <li>
      <a
        href="#field2"
      >
        Error 2
      </a>
    </li>
    <li>
      <a
        href="#field3"
      >
        Error 3
      </a>
    </li>
  </ul>
</div>
`;

exports[`Form text component should render with default props 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="heading-medium error-summary-heading"
    id="error-summary-heading-example-1"
  >
    Please fix the following errors
  </h2>
  <ul
    class="error-summary-list"
  />
</div>
`;

exports[`Form text component should render with description when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="heading-medium error-summary-heading"
    id="error-summary-heading-example-1"
  >
    Please fix the following errors
  </h2>
  <p>
    Displaying a list of the errors on the page
  </p>
  <ul
    class="error-summary-list"
  />
</div>
`;

exports[`Form text component should render with heading when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="heading-medium error-summary-heading"
    id="error-summary-heading-example-1"
  >
    Error summary
  </h2>
  <ul
    class="error-summary-list"
  />
</div>
`;
